--- a/src/AppBundle/Resources/views/Admin/orders_db.html.twig
+++ b/src/AppBundle/Resources/views/Admin/orders_db.html.twig
@@ -259,7 +259,7 @@
                                     </td>
                                     <td>
                                         <a href="{{ path('admin_order_approve', {'cart_id': product.cart_id}) }}"
-                                           class="btn btn-info btn-xs">Open Order</a>
+                                           class="btn btn-default btn-xs">View</a>
                                     </td>
                                 </tr>
                             {% endfor %}
