Set number of rows to 100

--- a/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
@@ -202,6 +202,7 @@
         $(document).ready(function () {
             $('#part-table').DataTable({
                 paging: true,
+                pageLength: 100,
                 filter: true,
                 columnDefs: [{
                     targets: [9],
