--- a/src/AppBundle/Resources/views/Cart/view-all-open-returns.html.twig
+++ b/src/AppBundle/Resources/views/Cart/view-all-open-returns.html.twig
@@ -66,7 +66,7 @@
                                             <center>{{ item.returned_items_shipped_quantity }}</center>
                                         </td>
                                         <td style="padding-top: 20px;">
-                                            {% if item.quantity == item.returned_items_shipped_quantity %}
+                                            {% if item.quantity <= item.returned_items_shipped_quantity %}
                                                 <span class="label label-sm label-success">Shipped</span>
                                             {% else %}
                                                 <span class="label label-sm label-info">Need to be Shipped</span>
