--- a/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
+++ b/src/AppBundle/Resources/views/Admin/view_outstanding_orders.html.twig
@@ -151,7 +151,7 @@
                                         <td>
                                             {{ item.submit_date | date('m/d/y') }}
                                         </td>
-                                        <td>{{ item.return_ship_date | date('m/d/y') }}</td>
+                                        <td>{{ item.return_received_date | date('m/d/y') }}</td>
                                         <td>
                                             {{ item.description }}
                                             {{ item.description2 }}
