Fix blank values in DB parts

--- a/src/AppBundle/Resources/views/Admin/ordered-parts_db.html.twig
+++ b/src/AppBundle/Resources/views/Admin/ordered-parts_db.html.twig
@@ -232,7 +232,7 @@
                             {% for product in products %}
                                 <tr>
                                     <td>
-                                        {{ product.catName }}
+                                        {{ product.catName ?: "UNLISTED ITEMS" }}
                                     </td>
                                     <td>
                                         {{ product.stockNumber }}
