--- a/src/AppBundle/Resources/views/Admin/home.html.twig
+++ b/src/AppBundle/Resources/views/Admin/home.html.twig
@@ -15,6 +15,11 @@
                 width: 970px !important;
             }
         }
+
+        .dataTables_length > label {
+            padding-left: 5px;
+            padding-top: 2px;
+        }
     </style>
 
 {% endblock page_title %}
@@ -31,6 +36,9 @@
                 return confirm('Are you sure you want to delete this order?');
             });
         })
+        $(document).ready(function() {
+            $('#recently-approved').dataTable();
+        });
     </script>
 {% endblock %}
 
