--- a/src/AppBundle/Resources/views/Part/index.html.twig
+++ b/src/AppBundle/Resources/views/Part/index.html.twig
@@ -10,7 +10,153 @@
     Part list
 {% endblock page_name %}
 
-{% block content %}
+{% block content %}<style>
+    td {
+        word-wrap: break-word !important;
+    }
+
+    #overlay {
+        /* Height & width depends on how you want to reveal the overlay (see JS below) */
+        height: 100%;
+        width: 100%;
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        left: 0;
+        top: 0;
+        background-color: rgb(0, 0, 0); /* Black fallback color */
+        background-color: rgba(0, 0, 0, 0.66); /* Black w/opacity */
+        overflow-x: hidden; /* Disable horizontal scroll */
+        transition: 0.5s; /* 0.5 second transition effect to slide in or slide down the overlay (height or width, depending on reveal) */
+    }
+
+    .page-bar {
+        display: none;
+    }
+
+    .date-row {
+        border: 0;
+        background-color: #DaDaDa;
+        margin-bottom: 25px;
+        margin-left: -20px;
+        margin-right: -20px;
+        padding: 10px 20px 10px 20px;
+    }
+
+    .numbers {
+        text-align: center;
+    }
+
+    .date-row .form-inline {
+        width: 500px;
+        margin: 0 auto;
+    }
+
+    /*.grid-item {
+    transform: translate(0, 0) scale(1);
+    }
+    */
+    /* Style the Image Used to Trigger the Modal */
+    #myImg {
+        border-radius: 5px;
+        cursor: pointer;
+        transition: 0.3s;
+    }
+
+    #myImg:hover {
+        opacity: 0.7;
+    }
+
+    /* The Modal (background) */
+    .modal {
+        display: none; /* Hidden by default */
+        position: fixed; /* Stay in place */
+        z-index: 1; /* Sit on top */
+        padding-top: 100px; /* Location of the box */
+        left: 0;
+        top: 0;
+        width: 100%; /* Full width */
+        height: 100%; /* Full height */
+        overflow: auto; /* Enable scroll if needed */
+        background-color: rgb(0, 0, 0); /* Fallback color */
+        background-color: rgba(0, 0, 0, 0.9); /* Black w/ opacity */
+    }
+
+    /* Modal Content (Image) */
+    .modal-content {
+        margin: auto;
+        display: block;
+        width: 80%;
+        max-width: 700px;
+    }
+
+    /* Caption of Modal Image (Image Text) - Same Width as the Image */
+    #caption {
+        margin: auto;
+        display: block;
+        width: 80%;
+        max-width: 700px;
+        text-align: center;
+        color: #ccc;
+        padding: 10px 0;
+        height: 150px;
+    }
+
+    /* Add Animation - Zoom in the Modal */
+    .modal-content, #caption {
+        -webkit-animation-name: zoom;
+        -webkit-animation-duration: 0.6s;
+        animation-name: zoom;
+        animation-duration: 0.6s;
+    }
+
+    @-webkit-keyframes zoom {
+        from {
+            -webkit-transform: scale(0)
+        }
+        to {
+            -webkit-transform: scale(1)
+        }
+    }
+
+    @keyframes zoom {
+        from {
+            transform: scale(0)
+        }
+        to {
+            transform: scale(1)
+        }
+    }
+
+    /* The Close Button */
+    .fa-times {
+        position: absolute;
+        top: 40px;
+        right: 75px;
+        color: #f1f1f1;
+        font-size: 60px;
+        font-weight: bold;
+        transition: 0.3s;
+    }
+
+    .fa-times:hover,
+    .fa-times:focus {
+        color: #bbb;
+        text-decoration: none;
+        cursor: pointer;
+    }
+
+    /* 100% Image Width on Smaller Screens */
+    @media only screen and (max-width: 700px) {
+        .modal-content {
+            width: 100%;
+        }
+    }
+
+    select[multiple] {
+        height: 200px;
+    }
+</style>
+    <div id="overlay"></div>
     <div class="" style="margin-right: 0px; margin-left: 0px;">
         <a class="btn btn-success" style="margin-bottom: 15px;" href="{{ path('admin_part_new') }}">Add a New Part</a>
         <div class="table">
@@ -20,6 +166,7 @@
                     <th>Stocknumber</th>
                     <th>Description</th>
                     <th>Category</th>
+                    <th>Photo</th>
                     <th>Require Return</th>
                     <th>Actions</th>
                 </tr>
@@ -30,6 +177,13 @@
                         <td>{{ part.stockNumber }}</td>
                         <td>{{ part.description }}</td>
                         <td class="show-for-large-only">{{ part.partCategory.name }}</td>
+                        <td>
+                            <a onclick="popup('{{ part.id }}')" style="cursor: pointer">
+                                <i class="fa fa-camera" style="font-size: 22px; color: #e2001a;"></i>
+                                <img id="{{ part.id }}-img" src="/uploads/documents/{{ part.path }}"
+                                     width="0" height="0" style="display: none;">
+                            </a>
+                        </td>
                         <td class="show-for-large-only">{{ part.requireReturn ? 'Yes' : 'No' }}</td>
                         <td>
                             <ul>
@@ -47,14 +201,58 @@
         </div>
     </div>
 
+    <div id="image_modal" class="modal" style="display: none;">
+
+        <!-- The Close Button -->
+        <span class="close" onclick="document.getElementById('image_modal').style.display='none'">
+        <a class="fa fa-times">
+        </a>
+        </span>
+
+        <!-- Modal Content (The Image) -->
+        <img class="modal-content" id="img01">
+
+        <!-- Modal Caption (Image Text) -->
+        <div id="caption"></div>
+    </div>
+
 {% endblock content %}
 
 {% block footer %}
     <script>
+        $('#overlay').show();
+        window.onclick = function (event) {
+            if (event.target == modal) {
+                modal.style.display = "none";
+            }
+        };
+
+        var modal = document.getElementById('image_modal');
+        var captionText = document.getElementById("caption");
+        var modalImg = document.getElementById("img01");
+
+        // Get the <span> element that closes the modal
+        var span = document.getElementsByClassName("close")[0];
+
+        // When the user clicks on <span> (x), close the modal
+        span.onclick = function () {
+            modal.style.display = "none";
+        };
+
+        function popup(id) {
+            var img = document.getElementById(id + "-img");
+
+            modal.style.display = "block";
+            modalImg.src = img.src;
+            modalImg.alt = img.alt;
+            captionText.innerHTML = img.alt;
+        }
+
         $(document).ready(function () {
             $('#part-table').DataTable({
                 paging: false
             });
+            $('#overlay').hide();
         });
     </script>
 {% endblock footer %}
