--- a/src/AppBundle/Resources/views/Cart/view-all-open-returns.html.twig
+++ b/src/AppBundle/Resources/views/Cart/view-all-open-returns.html.twig
@@ -8,6 +8,9 @@
         .page-bar {
             display: none;
         }
+        .dataTables_wrapper {
+            padding: 10px;
+        }
     </style>
 {% endblock page_title %}
 
@@ -22,83 +25,9 @@
     <div class="row">
         <div id="submitted" class="col-md-12">
             <div class="portlet">
-                <div class="portlet-title" style="background-color: #d9edf7 !important;">
-                    <div class="caption">
-                        PARTS THAT NEED TO BE RETURNED
-                    </div>
-                </div>
-                <div class="portlet-body">
-                    {% if to_be_returned %}
-                        <div class="table-scrollable" style="padding-bottom: 10px; padding-top: 0px; margin-top: -7px;">
-                            <table class="table table-striped table-hover" style="margin-top: 40px;">
-                                <thead>
-                                <tr>
-                                    <th>ORDER #</th>
-                                    <th class="hidden-480">DATE SUBMITTED</th>
-                                    <th>APPROVED</th>
-                                    <th class="hidden-480">STOCK #</th>
-                                    <th class="hidden-480">DESCRIPTION</th>
-                                    <th class="hidden-480">QUANTITY</th>
-                                    <th class="hidden-480">ITEMS SHIPPED</th>
-                                    <th class="hidden-480">SHIPPED</th>
-                                    <th class="hidden-480"></th>
-                                </tr>
-                                </thead>
-                                <tbody>
-
-                                {% for item in to_be_returned %}
-                                    <tr>
-                                        <td style="padding-top: 20px;">{{ item.order_number }}</td>
-                                        <td style="padding-top: 20px;">{{ item.submit_date | date('m/d/Y') }}</td>
-                                        <td style="padding-top: 20px;">
-                                            {% if item.approved %}
-                                                <span class="label label-sm label-success">Approved</span>
-                                            {% else %}
-                                                <span class="label label-sm label-info">Review Pending</span>
-                                            {% endif %}
-                                        </td>
-                                        <td style="padding-top: 20px;">{{ item.stock_number }}</td>
-                                        <td style="padding-top: 20px;">{{ item.description }}</td>
-                                        <td style="padding-top: 20px;">
-                                            <center>{{ item.quantity }}</center>
-                                        </td>
-                                        <td style="padding-top: 20px;">
-                                            <center>{{ item.returned_items_shipped_quantity }}</center>
-                                        </td>
-                                        <td style="padding-top: 20px;">
-                                            {% if item.quantity <= item.returned_items_shipped_quantity %}
-                                                <span class="label label-sm label-success">Shipped</span>
-                                            {% else %}
-                                                <span class="label label-sm label-info">Need to be Shipped</span>
-                                            {% endif %}
-                                        </td>
-                                        <td style="padding-top: 20px;">
-                                            <a class="btn btn-default btn-sm purple"
-                                               href="{{ path('view_past_order', {'order_id': item.cart_id}) }}">
-                                                <i class="fa fa-book"></i> view order
-                                            </a>
-                                        </td>
-                                    </tr>
-                                {% endfor %}
-                                </tbody>
-                            </table>
-                        </div>
-                    {% else %}
-                        <div class="title" style="padding-bottom: 20px; padding-top: 20px;">
-                            There are no parts that need to be sent to Uster.
-                        </div>
-                    {% endif %}
-
-                </div>
-            </div>
-        </div>
-    </div>
-    <div class="row">
-        <div id="submitted" class="col-md-12">
-            <div class="portlet">
                 <div class="portlet-title" style="background-color: #dff0d8 !important;">
                     <div class="caption">
-                        PARTS THAT HAVE BEEN RECEIVED BY USTER
+                        PART RETURNS
                     </div>
                 </div>
                 <div class="portlet-body">
@@ -109,6 +38,7 @@
                                 <tr>
                                     <th>ORDER #</th>
                                     <th class="hidden-480">DATE SUBMITTED</th>
+                                    <th class="hidden-480">DATE APPROVED</th>
                                     <th>APPROVED</th>
                                     <th class="hidden-480">STOCK #</th>
                                     <th class="hidden-480">DESCRIPTION</th>
@@ -125,6 +55,7 @@
                                     <tr>
                                         <td style="padding-top: 20px;">{{ item.order_number }}</td>
                                         <td style="padding-top: 20px;">{{ item.submit_date | date('m/d/Y') }}</td>
+                                        <td style="padding-top: 20px;">{{ item.approve_date | date('m/d/Y') }}</td>
                                         <td style="padding-top: 20px;">
                                             {% if item.approved %}
                                                 <span class="label label-sm label-success">Approved</span>
@@ -138,7 +69,9 @@
                                             <center>{{ item.quantity }}</center>
                                         </td>
                                         <td style="padding-top: 20px;">
-                                            <center>{{ item.returned_items_shipped_quantity }}</center>
+                                            <center id="{{ item.id }}-shipped">
+                                                {{ item.returned_items_shipped_quantity }}
+                                            </center>
                                         </td>
                                         <td style="padding-top: 20px;">
                                             <center>{{ item.returned_items_quantity }}</center>
@@ -155,6 +88,10 @@
                                                href="{{ path('view_past_order', {'order_id': item.id}) }}">
                                                 <i class="fa fa-book"></i> view
                                             </a>
+                                            <button class="btn btn-success btn-xs purple"
+                                                    onclick="confirmShipment({{ item.id }})">
+                                                <i class="fa fa-check"></i> Confirm Shipment
+                                            </button>
                                         </td>
                                     </tr>
                                 {% endfor %}
@@ -172,3 +109,32 @@
         </div>
     </div>
 {% endblock content %}
+
+{% block footer %}
+    <script type="text/javascript">
+        $(document).ready(function() {
+            $('#submitted table').dataTable();
+        });
+
+        function confirmShipment(id) {
+            console.log(id);
+            var numItemsShipped = parseInt($('#' + id + '-shipped').text());
+            console.log(numItemsShipped);
+
+            var newNumItemsReceived = window.prompt("How many items did you ship to Uster?", numItemsShipped);
+
+            if (null === newNumItemsReceived) {  // The user cancels the action.
+                return;
+            }
+
+            $.post("{{ path('api_update_return_item_ship_quantity') }}", {
+                'cart_product_id': id,
+                'returned_items_quantity': newNumItemsReceived
+            }).done(function (data) {
+                location.href = '{{ path('view_all_outstanding_returns') }}';
+            }).fail(function (xhr, status, error) {
+                alert('ERROR! - ' + xhr.responseText);
+            });
+        }
+    </script>
+{% endblock %}
