Fix orders page

--- a/src/AppBundle/Resources/views/Admin/print_order.html.twig
+++ b/src/AppBundle/Resources/views/Admin/print_order.html.twig
@@ -106,7 +106,7 @@
                 Date Placed: <strong>{{ cart.submitDate|date('Y-m-d') }}</strong>
             </p>
             <p>
-                Date Processed: <strong>{{ cart.submitDate|date('Y-m-d') }}</strong>
+                Date Processed: <strong>{{ cart.approveDate|date('Y-m-d') }}</strong>
             </p>
             <p>
                 Requested By: <strong>{{ cart.requesterFirstName ~ ' ' ~ cart.requesterLastName }}</strong>
