Group line numbers

--- a/src/AppBundle/Resources/views/Admin/ordered-parts_db.html.twig
+++ b/src/AppBundle/Resources/views/Admin/ordered-parts_db.html.twig
@@ -217,7 +217,7 @@
                                width="100%">
                             <thead>
                             <tr>
-                                <td class="none">Line #</td>
+                                <td class="all">Line #</td>
                                 <th class="all">PRODUCT #</th>
                                 <th class="all">ORDER #</th>
                                 <th class="all">DATE SUBMITTED</th>
