--- a/src/AppBundle/Resources/views/Admin/review_backorders.html.twig
+++ b/src/AppBundle/Resources/views/Admin/review_backorders.html.twig
@@ -402,7 +402,7 @@
                     dataType: 'json',
                     success: function (data) {
                         console.log(data);
-                        location.href = '{{ path('admin_home') }}';
+                        location.href = '{{ path('admin_order_approve', {'cart_id': cart_id }) }}';
                     },
                     error: function (data) {
                         console.log(data);
